# xiaohongshu-auto-poster

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_apps.yml
.xhs_profile_verify/: Local State
.xhs_profile_verify/Default/: Cookies  DIPS-wal  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  TransportSecurity  Web Data
.xhs_profile_verify/Default/DawnGraphiteCache/: index
.xhs_profile_verify/Default/DawnWebGPUCache/: index
.xhs_profile_verify/Default/Extension Rules/: LOG
.xhs_profile_verify/Default/Extension Scripts/: LOG
.xhs_profile_verify/Default/Extension State/: LOG
.xhs_profile_verify/Default/GCM Store/: LOG
.xhs_profile_verify/Default/GPUCache/: index
.xhs_profile_verify/Default/Session Storage/: LOG
.xhs_profile_verify/Default/Sessions/: Session_13419952501655212  Tabs_13419952508933546
.xhs_profile_verify/Default/Site Characteristics Database/: LOG
.xhs_profile_verify/Default/WebStorage/: QuotaManager
.xhs_profile_verify/GrShaderCache/: index
.xhs_profile_verify/GraphiteDawnCache/: data_0  data_1  data_2  index
.xhs_profile_verify/ShaderCache/: index
.xhs_profile_verify/segmentation_platform/: ukm_db
docs/plans/: 2026-04-06-xhs-auto-poster-design.md
examples/: post.json  post.publish.json  post.verify.json
src/xhs_auto_poster/: __init__.py  desktop_app.py  gui.py  main.py  web_api.py  web_main.py
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
web/src/: App.jsx  index.css
(+135 files in other folders)
